Finished working on nav

--- a/quiz.html
+++ b/quiz.html
@@ -2,13 +2,35 @@
 <html lang="en">
 
 <head>
-
+    <title>Muhammad Alabd</title>
 
 
 </head>
 
 <body>
-
+    <header>My name is Mohammed</header>
+    <nav>
+        <ul>
+            <li>
+                <a href="#"> Home </a>
+            </li>
+            <li>
+                <a href="#"> Blog</a>
+            </li>
+            <li>
+                <a href="#"> Services</a>
+            </li>
+            <li>
+                <a href="#"> Testimonies</a>
+            </li>
+            <li>
+                <a href="#"> Meet our team</a>
+            </li>
+            <li>
+                <a href="#">Contact Us </a>
+            </li>
+        </ul>
+    </nav>
 
 
 
