Finished working on my blog posts and services

--- a/quiz.html
+++ b/quiz.html
@@ -31,7 +31,51 @@
             </li>
         </ul>
     </nav>
+    <section>
+        <h2>My Blog Posts</h2>
+        <article>
+            <h2>Ahmed</h2>
+            lorem ipsum
+            <br>
+            <iframe width=" 560 " height="315 " src="https://www.youtube.com/embed/hLQl3WQQoQ0
+                " frameborder="0 " allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture
+                " allowfullscreen></iframe>
+        </article>
+        <article>
+            <h2>Zaynab</h2>
+            Sed et libero lobortis, hendrerit elit non, bibendum ex. Cras sed nulla id velit viverra egestas. Duis nec neque tempus,
+            dignissim dui eu, dictum leo. Nam auctor lacus ac massa faucibus, non tincidunt tortor aliquam. Donec vitae erat
+            erat. Praesent aliquet nibh orci, vel ultricies velit consequat non. Vestibulum interdum scelerisque tempor.
+        </article>
+        <article>
+            <h2>Mujtaba</h2>
+            Aenean in massa condimentum, finibus magna eget, suscipit velit. Donec vel elit ullamcorper, fermentum libero sed, consectetur
+            metus. Praesent a fringilla dui. Mauris at aliquam mauris, in lobortis felis. Aliquam at convallis eros. Morbi
+            at laoreet magna, nec sagittis libero. Sed pharetra ex consequat, semper justo a, sodales sem. Vivamus et sodales
+            eros. Nunc auctor sem sit amet dui lacinia, id ultricies ex imperdiet. Nullam molestie turpis et lectus laoreet
+            scelerisque.
+        </article>
+        <aside>
+            <h2>Top posts</h2>
+            <ul >
+                <li>
+                    <a href="#">first post</a>
+                </li>
+                <li>
+                    <a href="#">second post</a>
+                </li>
+            </ul>
+        </aside>
 
+    </section>
+    <section>
+        <h2>Services</h2>
+        <article>
+            <h3>Build a super website</h3>
+            <p>you shoud do it by your self.....<a href="#">Learn more</a></p>
+            
+        </article>
+    </section>
 
 
 </body>
